# nes_sim

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  Cargo.toml  Makefile  TEST_ANALYSIS.md  justfile  opencode.json  typos.toml
.cargo/: config.toml
.claude/: settings.json
.scratch/cartridge-capability-query/: PRD.md
.scratch/cartridge-capability-query/issues/: 01-define-capabilities.md  02-integrate-ppu-guards.md
.scratch/chr-storage-split/: PRD.md
.scratch/chr-storage-split/issues/: 00-prefactor-write-register.md  01-infrastructure-and-non-banked.md  02-cnrom-mapper3.md  03-mmc3-mapper4.md  04-mmc1-mapper1.md  05-vrc24-mappers-21-25.md  06-mapper34-and-mapper87.md
.scratch/chr-storage-trait/: PRD.md
.scratch/chr-storage-trait/issues/: 01-chr-storage-trait-direct-chr.md  02-windowed-chr-mmc3.md  03-direct-chr-mapper2-mapper7.md  04-windowed-chr-mmc1-vrc24.md  05-windowed-chr-mapper3-cnrom.md
.scratch/flatten-nesmachine/: PRD.md
.scratch/oam-module-restructure/: PRD.md
.scratch/oam-module-restructure/issues/: 01-registers-oam-type-swap.md  02-spritemanager-typed-interface.md  03-oam-attribute-unit-tests.md
.scratch/system-clock-refactor/issues/: 01-system-clock-infra-cpu.md  02-wire-apu-dma.md  03-remove-drain-microcodes.md  04-delete-global-clock.md
.scratch/tile-cache/: PRD.md
.scratch/tile-cache/issues/: 01-extract-tile-fetch.md  02-tile-cache-integration.md
doc/: dma.md
docs/adr/: 0001-chr-storage-trait.md  0001-secondary-oam.md  0002-cartridge-trait-object.md  0002-tile-cache.md  0003-cold-start-scanline-261.md  0004-register16-for-cpu-registers.md
docs/agents/: triage-labels.md
nes_core/: CLAUDE.md  Cargo.toml
nes_core/src/: cpu.rs  ines.rs  lib.rs  machine.rs  mcu.rs  movie.rs  nes.rs  nes_machine.rs  render.rs  test_utils.rs
nes_core/src/cpu/: addressing.rs  cpu2.rs  instruction.rs  microcode.rs  reg16.rs  tests.rs
nes_core/src/cpu/addressing/: tests.rs
nes_core/src/cpu/cpu2/: init_microtable.inc.rs  microcode.rs  tests.rs
nes_core/src/cpu/cpu2/microcode/: tests.rs
nes_core/src/cpu/microcode/: tests.rs
nes_core/src/ines/: parser.rs  tests.rs
nes_core/src/machine/: tests.rs
nes_core/src/mcu/: mapping.rs  mirror.rs  ram.rs
nes_core/src/mcu/mapping/: tests.rs
nes_core/src/movie/: tests.rs
nes_core/src/nes/: apu.rs  controller.rs  dmc_dma.rs  lower_ram.rs  machine.rs  mapper.rs  nes_apu.rs  nes_mcu.rs  ppu.rs  tests.rs
nes_core/src/nes/apu/: dmc.rs  frame_sequencer.rs  helper.rs  mixer.rs  noise.rs  pulse.rs  registers.rs  tests.rs  triangle.rs
nes_core/src/nes/apu/helper/: tests.rs
nes_core/src/nes/apu/pulse/: tests.rs
nes_core/src/nes/controller/: tests.rs
nes_core/src/nes/dmc_dma/: tests.rs
nes_core/src/nes/mapper/: axrom.rs  bxrom.rs  chr_storage.rs  cnrom.rs  j87.rs  mapper0.rs  mapper2.rs  mapper3.rs  mapper34.rs  mapper7.rs  mmc1.rs  mmc3.rs  mmc5.rs  nina001.rs  nrom.rs  tests.rs  uxrom.rs  vrc24.rs
nes_core/src/nes/mapper/mmc3/: tests.rs
nes_core/src/nes/mapper/vrc24/: tests.rs
nes_core/src/nes/nes_mcu/: tests.rs
nes_core/src/nes/ppu/: default.pal  name_table.rs  nametable.rs  oam.rs  palette.rs  pattern.rs  registers.rs  sprite.rs  tests.rs
nes_core/src/nes/ppu/name_table/: tests.rs
nes_core/src/nes/ppu/oam/: tests.rs
nes_core/src/nes/ppu/registers/: tests.rs
nes_core/src/render/: composite.rs  image_render.rs  markdown_render.rs
nes_cpu_test/: CLAUDE.md  Cargo.toml
nes_cpu_test/src/: image.rs  main.rs  plugin.rs  tcp_server.rs
nes_cpu_test/src/image/: driver.rs
nes_cpu_test/src/plugin/: console.rs  detect_dead_loop.rs  img_exit.rs  max_instructions.rs  monitor_test_status.rs  nametable_console.rs  png_frame_match.rs  report.rs  timeout.rs
nes_cpu_test/src/plugin/report/: simple_disassembly.rs
nes_mcp_protocol/: Cargo.toml
nes_mcp_protocol/src/: lib.rs
nes_mcp_server/: Cargo.toml
nes_mcp_server/src/: main.rs
nes_mcp_server/tests/: integration_test.rs
nes_sdl/: Cargo.toml
nes_sdl/src/: lib.rs
nes_web/: CLAUDE.md  Cargo.toml
nes_web/.cargo/: config.toml
nes_web/src/: canvas_render.rs  drivers.rs  lib.rs
nes_web/src/drivers/: apu.rs  ppu.rs
nescli/: CLAUDE.md  Cargo.toml
nescli/src/: actions.rs  main.rs
nescli/src/actions/: info.rs  play_movie.rs  read_chr.rs  run.rs
src/: addressing.rs  cpu.rs  instruction.rs  lib.rs  mcu.rs  mcu_mem.rs  nes.rs  test.rs
src/cpu/: instruction.rs
src/mcu/: mapping.rs  mirror.rs  ram.rs
src/nes/: apu.rs  controller.rs  ppu.rs
www/: index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
