[workspace]
members = [
  "nes_core",
  "nes_cpu_test",
  "nes_web",
  "nescli",
]

[profile.dev]
split-debuginfo = "unpacked"
opt-level = "z"

[profile.release]
lto = true
codegen-units=1
opt-level = "z"
# uncomment below to enable profile release build
# debug = 1

# uncomment below to enable profile release build
# [rust]
# debuginfo-level = 1
