[workspace]
resolver = "2"
members = [
  "nes_core",
  "nes_cpu_test",
  "nes_web",
  "nescli",
]

# Workspace dependencies - ALL dependencies managed here
[workspace.dependencies]
# Core utilities
log = {version = "0.4", features = ["release_max_level_info"]}
thiserror = "2"
anyhow = "1"

# CLI and argument parsing
clap = { version = "4", features = ["derive"] }
ansi_term = "0.12"
is-terminal = "0.4"

# Image handling
image = { version = "0.25", default-features = false }

# Iterator utilities
itertools = "0.14"

# Parsing and serialization
nom = "8"
strum_macros = "0.26"

# Logging
env_logger = { version = "0.11"}
test-log = "0.2"

# Testing
rstest = {version = "0.23", default-features = false}

# WebAssembly (WASM)
wasm-bindgen = "0.2"
js-sys = "0.3"
console_log = "1"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "Window", "Document"] }

# Local path dependencies (for reference)
nes_core = { path = "nes_core" }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units=1
# uncomment below to enable profile release build
# debug = 1

# uncomment below to enable profile release build
# [rust]
# debuginfo-level = 1
