[package]
name = "nes_core"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
log = { workspace = true, features = ["release_max_level_off"] }
modular-bitfield = { workspace = true }
nom = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
test-log = { workspace = true }
