[package]
name = "nes_core"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
arraydeque = { workspace = true }
log = { workspace = true }
winnow = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
tinyvec = { version = "1.11.0", features = ["latest_stable_rust"] }
bitfield-struct = "0.12.1"

[dev-dependencies]
env_logger = { workspace = true }
test-log = { workspace = true }
