[package]
name = "nes_core"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
arraydeque = { workspace = true }
log = { workspace = true }
winnow = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
tinyvec = { version = "1.11.0", features = ["latest_stable_rust"] }
bitfield-struct.workspace = true
scopeguard.workspace = true
serde.workspace = true
anyhow.workspace = true
base64 = "0.22.1"
md5 = "0.8.0"

[dev-dependencies]
env_logger = { workspace = true }
mockall = "0.14.0"
test-log = { workspace = true }
