[package]
name = "nes_cpu_test"
version = "0.1.0"
edition = "2024"

[dependencies]
nes_core = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
ansi_term = { workspace = true }
is-terminal = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
