[package]
name = "nes_mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
nes_mcp_protocol = { path = "../nes_mcp_protocol" }
rmcp = { version = "0.3", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
url = "0.5"

[dev-dependencies]
md5 = "0.7"
