[package]
name = "nes_web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
nes_core = { path = "../nes_core" }
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "Window", "Document"]}
image = { version = "0.25", default-features = false }
js-sys = "0.3"
