[package]
name = "nes_web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
nes_core = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
image = { workspace = true }
js-sys = { workspace = true }
