[package]
name = "nescli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = "0.11"
log = "0.4"
image = { workspace = true, features = ["png"] }
nes_core = { workspace = true }
sdl2 = "0.38"
